# bindings-gdal

./: .gitignore  .travis-install-gdal.bash_source  .travis.yml  LICENSE  README.md  Setup.hs  appveyor.yml  bindings-gdal.cabal  cbits.cpp  cbits.h  codex.tags  default.nix  hscope.out  install_gdal.sh  nixpkgs.nix  release.nix  stack-appveyor.yaml  stack-lts-2.yaml  stack.lts-1.yaml  stack.yaml
cbits/: cbits.c  cbits.h  contourwriter.c  contourwriter.h  driver.cpp  driver.h  errorhandler.c  errorhandler.h  hsdataset.cpp  hsdataset.h  overviews.cpp  overviews.h  suggestedwarpoutput.c  suggestedwarpoutput.h
exe/: OGRDump.hs  OGRInfo.hs  RasterStats.hs
include/: bindings.h
src/: GDAL.hs  OGR.hs  OSR.hs
src/Bindings/: GDAL.hs
src/Bindings/GDAL/: Internal.chs
src/Bindings/OSGeo/: GDAL.hs  OGR.hs  OSR.hs  Util.hs
src/Bindings/OSGeo/GDAL/: Internal.chs
src/Bindings/OSGeo/OGR/: Internal.chs
src/Bindings/OSGeo/OSR/: Internal.chs
src/GDAL/: Algorithms.hs  Complex.hs  OGR.hs  OSR.hs  VRT.hs  Warper.chs  Warper.hs
src/GDAL/Internal/: Algorithms.chs  CPLConv.chs  CPLError.chs  CPLProgress.chs  CPLString.chs  Common.chs  Complex.hs  DataType.chs  DataType.hs  GCP.chs  GDAL.chs  GDALData.hs  HSDataset.chs  HSDriver.chs  Layer.chs  OGR.chs  OGRError.chs  OGRFeature.chs  OGRFieldInstances.hs  OGRGeometry.chs  OSR.chs  Types.hs  Util.hs  VRT.chs  VSI.chs  Warper.chs  bindings.h
src/GDAL/Internal/DataType/: Instances.hs  Internal.chs
src/GDAL/Internal/Types/: Pair.hs  Value.hs  Vector.hs
src/GDAL/Internal/Types/Vector/: Mutable.hs
src/OSGeo/: GDAL.hs  OGR.hs  OSR.hs  Util.hs
src/OSGeo/GDAL/: Internal.chs  Internal.hs  Types.chs  Types.hs  Warper.chs
src/OSGeo/GDAL/Internal/: Types.hs
src/OSGeo/OGR/: Internal.chs  Internal.hs
src/OSGeo/OSR/: Internal.chs  Internal.hs
tests/: Arbitrary.hs  GDAL.hs  GDALDriverSpec.hs  GDALIOSpec.hs  GDALSpec.hs  Main.hs  OGRGeometrySpec.hs  OGRSpec.hs  OSRSpec.hs  TestUtils.hs
tests/GDAL/: AlgorithmsSpec.hs  OGRSpec.hs  OSRSpec.hs  VRTSpec.hs  WarperSpec.hs
tests/GDAL/Internal/: OGRFeatureSpec.hs
tests/OSGeo/: GDALSpec.hs  TestUtils.hs
tests/fixtures/: fondo.shp  fondo.shx
