name:                bindings-gdal
version:             2.1.0
synopsis:            Bindings to the GDAL library
description:         Provides (incomplete) c-bindings to the Geospatial Data Abstraction Library
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde Gonzalez
maintainer:          alberto@toscat.net
copyright:           2013-2015
category:            Bindings
build-type:          Custom
cabal-version:       >=1.10
Data-Files:
  tests/fixtures/fondo.shp
  tests/fixtures/fondo.shx

source-repository head
  type:              git
  location:          https://github.com/meteogrid/bindings-gdal.git


library
  build-tools:       c2hs >= 0.25
  hs-source-dirs:    src
  exposed-modules:   OGR
                   , OSR
                   , GDAL
                   , GDAL.Algorithms
                   , GDAL.Warper

                   , GDAL.Internal.Types
                   , GDAL.Internal.Util
                   , GDAL.Internal.Common
                   , GDAL.Internal.CPLString
                   , GDAL.Internal.CPLError
                   , GDAL.Internal.CPLProgress
                   , GDAL.Internal.CPLConv
                   , GDAL.Internal.GCP
                   , GDAL.Internal.OGRError
                   , GDAL.Internal.OSR
                   , GDAL.Internal.OGRGeometry
                   , GDAL.Internal.OGRFeature
                   , GDAL.Internal.OGRFieldInstances
                   , GDAL.Internal.OGR
                   , GDAL.Internal.GDAL
                   , GDAL.Internal.Algorithms
                   , GDAL.Internal.Warper
  build-depends:     base >=4.5 && < 5
                   , vector
                   , conduit
                   , bytestring
                   , text
                   , time
                   , template-haskell
                   , resourcet
                   , exceptions
                   , transformers
                   , transformers-base
                   , mtl
                   , deepseq
                   , data-default
                   , unordered-containers
                   , ghc-prim
  ghc-options:       -funbox-strict-fields -Wall
  install-includes: bindings.h
  default-extensions: CPP
  default-language: Haskell2010
  include-dirs:    src/GDAL/Internal/ cbits
  cc-options:      -Wall -O2 -g
  c-sources:       cbits/errorhandler.c
                 , cbits/contourwriter.c
  includes:        cbits/errorhandler.h
                 , cbits/contourwriter.h

  if impl(ghc >= 7.10.0)
    cpp-options: -DSTORABLE_COMPLEX

test-suite spec
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , filepath
                  , hspec
                  , hspec-core >= 1.13
                  , QuickCheck
                  , bindings-gdal
                  , vector
                  , bytestring
                  , text
                  , temporary
                  , exceptions
                  , transformers
                  , time
                  , data-default
                  , conduit
                  , unix
  hs-source-dirs:   tests
  main-is:          Main.hs
  other-modules:    Spec
                  , GDALSpec
                  , OSRSpec
                  , OGRSpec
                  , OGRGeometrySpec
                  , GDAL.AlgorithmsSpec
                  , GDAL.WarperSpec
                  , Paths_bindings_gdal
                  , TestUtils
                  , Arbitrary
  default-language: Haskell2010
  ghc-options:     -Wall -rtsopts -threaded -with-rtsopts=-N
  default-extensions: CPP
  include-dirs:    src/GDAL/Internal/
  if impl(ghc >= 7.10.0)
    cpp-options: -DSTORABLE_COMPLEX

executable ogrinfo-hs
  build-depends:       base
                     , bindings-gdal
                     , text
                     , bytestring
                     , unordered-containers
                     , transformers
                     , conduit
  ghc-options:         -Wall -rtsopts -O2
  hs-source-dirs:      exe
  main-is:             OGRInfo.hs
  default-language:    Haskell2010

executable rasterstats-hs
  build-depends:       base
                     , bindings-gdal
                     , vector
  ghc-options:         -Wall -rtsopts -O2
  hs-source-dirs:      exe
  main-is:             RasterStats.hs
  default-language:    Haskell2010
