name:                bindings-gdal
version:             2.1.1.1
synopsis:            Bindings to the GDAL library
description:         Provides (incomplete) c-bindings to the Geospatial Data Abstraction Library
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde Gonzalez
maintainer:          alberto@toscat.net
copyright:           2013-2015
category:            Bindings
build-type:          Custom
cabal-version:       >=1.10
Data-Files:
  tests/fixtures/fondo.shp
  tests/fixtures/fondo.shx

custom-setup
  setup-depends: base, Cabal, filepath, process

flag examples
  description: Build example apps
  default: False
  manual: True

flag autoconfig
  description:
    Use gdal-config to set extra-libraries, extra-lib-dirs and include-dirs.
  default: True

flag embed-data
  description: Embed GDAL_DATA in executable
  default: False
  manual: True

flag static
  description: Link executables statically
  default: False
  manual: True

source-repository head
  type:              git
  location:          https://github.com/albertov/bindings-gdal.git


library
  build-tools:       c2hs >= 0.25
  hs-source-dirs:    src
  exposed-modules:   OGR
                   , OSR
                   , GDAL
                   , GDAL.Algorithms
                   , GDAL.Warper
                   , GDAL.VRT

                   , GDAL.Internal.Types
                   , GDAL.Internal.Types.Value
                   , GDAL.Internal.DataType
                   , GDAL.Internal.DataType.Internal
                   , GDAL.Internal.Util
                   , GDAL.Internal.Common
                   , GDAL.Internal.CPLString
                   , GDAL.Internal.CPLError
                   , GDAL.Internal.CPLProgress
                   , GDAL.Internal.CPLConv
                   , GDAL.Internal.GCP
                   , GDAL.Internal.OGRError
                   , GDAL.Internal.OSR
                   , GDAL.Internal.OGRGeometry
                   , GDAL.Internal.OGRFeature
                   , GDAL.Internal.OGRFieldInstances
                   , GDAL.Internal.Layer
                   , GDAL.Internal.OGR
                   , GDAL.Internal.GDAL
                   , GDAL.Internal.Algorithms
                   , GDAL.Internal.Warper
                   , GDAL.Internal.HSDataset
                   , GDAL.Internal.HSDriver
                   , GDAL.Internal.VRT
  build-depends:     base                              >= 4.5     && < 5
                   , ghc-prim                          >= 0.3.1   && < 0.6
                   , bytestring                        >= 0.10.4  && < 0.11
                   , deepseq                           >= 1.3.0   && < 1.5
                   , conduit                           >= 1.2.5   && < 1.3
                   , exceptions                        >= 0.8.0   && < 0.11
                   , mtl                               >= 2.1.3   && < 2.3
                   , transformers                      >= 0.3     && < 0.6
                   , monad-control                     >= 1.0.0   && < 1.1
                   , transformers-base                 >= 0.4.4   && < 0.5
                   , resourcet                         >= 1.1.6   && < 1.2
                   , data-default                      >= 0.5.3   && < 0.8
                   , microlens                         >= 0.4.2   && < 0.5
                   , text                              >= 1.2.0   && < 1.3
                   , time                              >= 1.4.2   && < 1.9
                   , unordered-containers              >= 0.2.5   && < 0.3
                   , vector                            >= 0.10.12 && < 0.13
  if flag(embed-data)
    build-depends: file-embed
                 , directory
                 , filepath
                 , process
                 , template-haskell
    exposed-modules: GDAL.Internal.GDALData
    cpp-options: -DHAVE_EMBEDDED_DATA

  if !flag(autoconfig)
    if os(windows)
      extra-libraries: gdal_i
    else
      extra-libraries: gdal

  extra-libraries: stdc++

  ghc-options:       -funbox-strict-fields -Wall
  install-includes: bindings.h
  default-language: Haskell2010
  include-dirs:    include cbits
  cc-options:      -Wall -g
  c-sources:       cbits/errorhandler.c
                 , cbits/contourwriter.c
                 , cbits/driver.cpp
                 , cbits/hsdataset.cpp
                 , cbits/suggestedwarpoutput.c
                 , cbits/overviews.cpp
  includes:        cbits/errorhandler.h
                 , cbits/contourwriter.h
                 , cbits/driver.h
                 , cbits/hsdataset.h
                 , cbits/suggestedwarpoutput.h
                 , cbits/overviews.h

test-suite spec
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , filepath
                  , hspec
                  , hspec-core >= 1.13
                  , QuickCheck
                  , bindings-gdal
                  , vector
                  , bytestring
                  , text
                  , temporary
                  , exceptions
                  , transformers
                  , time
                  , data-default
                  , conduit
                  , microlens
  if os(windows)
    cpp-options: -DWINDOWS
  else
    build-depends: unix

  hs-source-dirs:   tests
  main-is:          Main.hs
  other-modules:    Spec
                  , GDALSpec
                  , GDALDriverSpec
                  , GDALIOSpec
                  , OSRSpec
                  , OGRSpec
                  , OGRGeometrySpec
                  , GDAL.AlgorithmsSpec
                  , GDAL.WarperSpec
                  , GDAL.VRTSpec
                  , Paths_bindings_gdal
                  , TestUtils
                  , Arbitrary
  default-language: Haskell2010
  ghc-options:     -Wall -rtsopts -threaded -with-rtsopts=-N
  if flag(static)
    ghc-options: -optl-static -optl-static-libstdc++ -optl-static-libgcc -pgml=g++
  include-dirs:    src/GDAL/Internal/

executable ogrinfo-hs
  build-depends:       base
                     , bindings-gdal
                     , text
                     , bytestring
                     , unordered-containers
                     , transformers
                     , conduit
  ghc-options:         -Wall -rtsopts -O2
  if flag(static)
    ghc-options: -optl-static -optl-static-libstdc++ -optl-static-libgcc
  hs-source-dirs:      exe
  main-is:             OGRInfo.hs
  default-language:    Haskell2010
  if !flag(examples)
    Buildable: False

executable rasterstats-hs
  build-depends:       base
                     , bindings-gdal
                     , vector
  ghc-options:         -Wall -rtsopts -O2
  if flag(static)
    ghc-options: -optl-static -optl-static-libstdc++ -optl-static-libgcc
  hs-source-dirs:      exe
  if flag(static)
    ghc-options:       -static -optl-static
  main-is:             RasterStats.hs
  default-language:    Haskell2010
  if !flag(examples)
    Buildable: False
